# BitBatter

./: .gitignore  Cargo.toml  analyze_log.py  baseballfield.txt  build.bat  build.sh  dodgers_exit_velocity.csv  howitsmade.txt  terminal_baseball.c  wild_pitch_implementation_plan.md  yankees_exit_velocity.csv
.claude/: settings.local.json
audio/: convert_to_mp3.py  make_8bit_retro.py  normalize_audio.py
data_down/: batter_SDG_2025.csv  batter_THW_2025.csv  pitcher_THW_2025.csv  statcast_downloader.py
data_down/statcast_downloads/: pitcher_SDG_2025.csv
docs/: CHANGELOG.md  DEVELOPERS.md  README.md
src/: audio.rs  input.rs  logger.rs  main.rs  team.rs  ui.rs
src/game/: constants.rs  engine.rs  engine_tests.rs  input_handler.rs  mod.rs  state.rs  state_tests.rs  update.rs
wild_pitch_rust/: Cargo.toml
wild_pitch_rust/examples/: mlb_data_test.rs
wild_pitch_rust/src/: lib.rs  main.rs
wild_pitch_rust/src/data/: loader.rs  mlb_importer.rs  mlb_test_data.rs  mod.rs  serialization.rs
wild_pitch_rust/src/game/: engine.rs  events.rs  mod.rs  state.rs
wild_pitch_rust/src/players/: batter.rs  fielder.rs  mod.rs  pitcher.rs
wild_pitch_rust/src/teams/: lineup.rs  mod.rs  roster.rs  stats.rs
wild_pitch_rust/src/ui/: dialogs.rs  menus.rs  mod.rs  terminal.rs  windows.rs
wild_pitch_rust/src/utils/: config.rs  mod.rs  random.rs
