[package]
name = "wild_pitch"
version = "0.1.0"
edition = "2021"
description = "A faithful recreation of Wild Pitch (1993) baseball simulation"
authors = ["Wild Pitch Team"]

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
